[project]
name = "info-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "baml-py>=0.220.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
